manifests/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: ephemeral-system
spec:
  selector:
    app: dashboard
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
  type: ClusterIP
